<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ParallexSecure</string>
    <string name="title_addIdentity">ADD IDENTITY</string>
    <string name="prompt_serialNumber">Serial Number: </string>
    <string name="prompt_activationCode">Activation Code: </string>
    <string name="prompt_name">Name:</string>
    <string name="prompt_address">Address:</string>
    <string name="label_OK">Ok</string>
    <string name="button_proceed">VERIFY</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_concern">Concern</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_done">Done</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="splash_text">ParallexSecure is a soft token self-onboarding app.</string>
    <string name="make_selection">Make your selection</string>
    <string name="make_selection_text">Select one of the prompts to start the process and protect your personal information.</string>
    <string name="active_token_text">Activation code has been sent yo your registered phone number. Proceed to activate your token</string>

    <string name="label_new_transactions">New Transactions</string>
    <string name="error_createFailure">Unable to create a soft token identity: </string>
    <string name="error_badSerialNum">The serial number was entered incorrectly. Check the number and try again.</string>
    <string name="error_badActCode">The activation code was entered incorrectly. Check the number and try again.</string>
    <string name="title_newPIN">PIN Number</string>
    <string name="intro_PIN">Your soft token identity needs to be protected with a %d digit PIN.</string>
    <string name="prompt_newPIN">NEW PIN</string>
    <string name="prompt_confirmPIN">CONFIRM PIN</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="error_mismatchPIN">The PIN values do not match. Re-enter your PIN.</string>
    <string name="title_regCode">Registration Code</string>
    <string name="intro_regCode">Enter the registration code into the Self-Service web page, or provide it to your help-desk to finish registration.</string>
    <string name="confirm_regCodeUse">Have you used the registration code yet? It will not be displayed again.</string>
    <string name="title_securityCode">Security Code</string>
    <string name="label_lifetime">LIFETIME</string>
    <string name="title_error">Error</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_success">Success</string>
    <string name="dialog_registering">Registering&#8230;</string>
    <string name="dialog_responding">Responding to Transaction&#8230;</string>
    <string name="dialog_retrieving">Retrieving Transaction&#8230;</string>
    <string name="no_new_transactions_message">There are no new transactions.</string>
    <string name="error_generating_confirmation_code">There was an error generating a confirmation code for the transaction.  Ensure that the details are correct and try again.  If the problem persists, try repeating the action that generated the transaction.</string>
    <string name="transaction_success">Successfully completed transaction with %s response.</string>
    <string name="transaction_failed">There was a problem attempting to complete the transaction, please try your response again.</string>
    <string name="confirm_code_title">Confirmation Code:</string>
    <string name="confirm_text">Enter the confirmation code below in your online application to complete the transaction.</string>
    <string name="invalid_launch_link_error">The activation launch link was invalid.  Contact your identity provider and try again.</string>
    <string name="label_scan_qr_code">QR Code</string>
    <string name="scan_qr_code_error">There was an error scanning the QR code or the data returned was invalid.</string>
    <string name="scan_qr_code_unknown_error">Unknown QR code operation.</string>
    <string name="scan_qr_code_tampered_error_msg">The scanned transaction cannot be validated.  It may have been corrupted or tampered with.</string>
    <string name="secure_activation_password_prompt_title">Password Required</string>
    <string name="secure_activation_password_prompt_text">This link is secured by a password.  Enter the password to continue.</string>
    <string name="pending_transactions">Pending transactions</string>
    <string name="powered_by">Parallex</string>
    <string name="select_an_action">Select an action</string>
    <string name="select_your_option">Select your option</string>
    <string name="activate_token">Activate Token</string>
    <string name="register_token">Register Token</string>
    <string name="resend_email">RESEND SMS/EMAIL</string>
    <string name="get_started">GET STARTED</string>
    <string name="choose_customer_type">Choose Customer Type</string>
    <string name="corporate_customer">Corporate Customer</string>
    <string name="individual_customer">Individual Customer</string>
    <string name="validate">VALIDATE</string>
    <string name="supply_customer_number">Supply customer number</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="default_phone_number">080xxxxxxxx</string>
    <string name="supply_username">Enter Username and Company Code</string>
    <string name="enter_username">Enter Username</string>
    <string name="customer_number">Enter Account Number</string>
    <string name="loading">Loading</string>
    <string name="serial_number">Serial Number:</string>
    <string name="default_count">30</string>
    <string name="default_security_code">0000-0000</string>
    <string name="copy_code">COPY CODE</string>
    <string name="register">Register</string>
    <string name="enter_company_id">Enter Company Id</string>
    <string name="customer_type">Customer Type</string>
    <string name="add_identity">Add Identity</string>
    <string name="pin_number">PIN Number</string>
    <string name="please_enter_your_pin_to_access_the_application">Please enter your PIN to access the application.</string>
    <string name="pin_required">PIN Required</string>
    <string name="confirm">Confirm</string>

    <string-array name="SpinnerTime">
        <item>1 min</item>
        <item>2 mins</item>
        <item>3 mins</item>
        <item>4 mins</item>
        <item>5 mins</item>
    </string-array>
</resources>
