<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_text"
        android:text="@string/confirm_text"
        android:layout_marginTop="6dp"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_code_title"
        android:text="@string/confirm_code_title"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/confirm_text"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_code"
        android:layout_below="@+id/confirm_code_title"/>
    
    <View android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="?android:attr/dividerVertical"
        android:layout_above="@+id/buttons"/>
    
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle">

        <Button android:id="@+id/ok"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_done"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
