<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context="com.parallex.softtoken.Registration.RegisterCustomer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/app_blue"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/customer_type"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_id_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_account_number"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/information" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_id"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_text"
                android:gravity="start|center_vertical"
                android:hint="@string/enter_account_number"
                android:inputType="phone"
                android:paddingHorizontal="20dp"
                app:passwordToggleEnabled="true"/>

            <TextView
                android:id="@+id/customer_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_company_id"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="20sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/information" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_id"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_text"
                android:gravity="start|center_vertical"
                android:hint="@string/enter_company_id"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:visibility="gone"
                app:passwordToggleEnabled="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:text="@string/choose_customer_type"/>

            <RadioGroup
                android:id="@+id/customer_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingVertical="5dp">

                <RadioButton
                    android:id="@+id/retail_customer"
                    android:background="@drawable/radio_selection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:checked="true"
                    android:text="@string/individual_customer"
                    android:textColor="#212121"
                    android:textSize="18sp"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp"
                    android:theme="@style/RadioButtonStyle" />

                <RadioButton
                    android:id="@+id/corporate_customer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/radio_selection"
                    android:paddingStart="18dp"
                    android:paddingEnd="0dp"
                    android:text="@string/corporate_customer"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:theme="@style/RadioButtonStyle" />
            </RadioGroup>

            <Button
                android:id="@+id/validate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="40dp"
                android:background="@drawable/button_border2"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


