<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context="com.parallex.softtoken.WelcomeActivity.SelectionMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:filterTouchesWhenObscured="true">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:background="@color/app_blue"
            android:theme="@style/ThemeOverlay.AppCompat.Light" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:gravity="center|top"
            android:background="@drawable/securitry_code_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/registration_image" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/make_selection"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:foregroundGravity="center"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/make_selection_text"
                android:textColor="@color/app_text_grey"
                android:textSize="16sp" />

            <Button
                android:id="@+id/activate_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border2"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/activate_token"
                android:textColor="@color/white"
                android:filterTouchesWhenObscured="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:drawableStart="@drawable/horizontal_line"
                android:drawableEnd="@drawable/horizontal_line"
                android:text="OR"
                android:textColor="#757575"
                android:textSize="14sp" />

            <Button
                android:id="@+id/register_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/button_border"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginBottom="40dp"
                android:text="@string/register_token"
                android:textColor="@color/app_blue"
                android:textSize="14sp"
                app:strokeColor="@color/black"
                android:filterTouchesWhenObscured="true"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
