<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context="com.parallex.softtoken.Authentication.EnterPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1784dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="50dp"
                android:text="@string/pin_required"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/pinIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/please_enter_your_pin_to_access_the_application"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/pin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pinIntro"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:gravity="center"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLength="4"
            android:textColor="@color/app_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/powered_by_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="right">

            <!--TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Powered By"
              android:textColor="@color/white"
              android:textSize="15sp" /-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="300dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
