<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_light_blue"
    tools:context="com.parallex.softtoken.WelcomeActivity.SplashActivity">

    <ImageView
        android:id="@+id/anim_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="132dp"
        app:srcCompat="@drawable/splash_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"

        android:layout_marginTop="280dp"
        android:background="@drawable/splash">
        


      

        <LinearLayout
            android:id="@+id/powered_by_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="right">

            <!--TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Powered By"
                android:textColor="@color/white"
                android:textSize="15sp" /-->

            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginLeft="5dp"-->
            <!--            android:layout_marginRight="5dp"-->
            <!--            android:fontFamily="@font/archivo_black"-->
            <!--            android:text="@string/powered_by"-->
            <!--            android:textStyle="bold"-->
            <!--            android:textColor="@color/pant_one_7408c"-->
            <!--            android:textSize="20sp" />-->
        </LinearLayout>




    </RelativeLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="134dp"
        android:layout_marginTop="210dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="28dp"

        android:layout_marginTop="240dp"

        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/splash_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_token"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/trasparaent_button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />


</RelativeLayout>
